--- a/.env.example
+++ b/.env.example
@@ -1,138 +1,73 @@
-# MSSQL MCP Server - Environment Configuration
-# Copy this file to .env and configure your values
-#
-# ============================================================================
-# DEPLOYMENT MODE: Choose one of two scenarios
-# ============================================================================
-#
-# SCENARIO 1: START FROM SCRATCH (Recommended for new users)
-# -----------------------------------------------------------
-# Just set:
-#   - PROJECT_NAME (your unique project identifier)
-#   - SERVER_NAME & DATABASE_NAME (your existing SQL database)
-#   - AZURE_LOCATION (Azure region)
-#
-# All Azure resources will be created automatically with names based on
-# PROJECT_NAME + random suffix. Example:
-#   PROJECT_NAME=mycompany → mycompany-dev-rg, mycompany-dev-mcp
-#
-# SCENARIO 2: BRING YOUR OWN RESOURCES
-# -------------------------------------
-# Set specific resource names/endpoints in the sections below.
-# Use this if you have existing Azure resources you want to reuse.
-#
-# ============================================================================
+# MCP Server Configuration
+# Copy to .env and set your values
 
-# ============================================================================
-# SCENARIO 1: START FROM SCRATCH - Required Configuration
-# ============================================================================
+# ===========================================
+# REQUIRED: Basic Configuration
+# ===========================================
 
-# Your project name (lowercase, alphanumeric, max 10 chars)
-# This will be used as prefix for all deployed resources
-# Example: mycompany, sqlproject, demo
+# Project name (lowercase, max 10 chars) - creates <project>-<env>-rg resources
 PROJECT_NAME=
 
-# Azure region where all resources will be deployed
-# Default: swedencentral
+# Azure region
 AZURE_LOCATION=swedencentral
 
-# Azure SQL Database (PREREQUISITE - must exist before deployment)
-# Create your SQL database manually or use existing one
+# Your existing SQL database
 SERVER_NAME=your-server.database.windows.net
 DATABASE_NAME=your-database
 
-# ============================================================================
-# SCENARIO 2: BRING YOUR OWN - Azure AI Foundry Resources
-# ============================================================================
-# Uncomment and set these ONLY if you have existing Foundry resources
+# ===========================================
+# OPTIONAL: Existing Foundry Resources
+# ===========================================
+# Uncomment if you have existing Azure AI Foundry resources
 
-# Azure AI Foundry project endpoint
-# Example: https://my-project.services.ai.azure.com/api/projects/my-project
-# AZURE_AI_ENDPOINT=
-
-# Azure AI Foundry project name
-# AZURE_AI_PROJECT_NAME=
-
-# Model deployment name in your Foundry project
-# Example: gpt-4o, gpt-4o-mini, gpt-4
+# AZURE_AI_ENDPOINT=https://my-project.services.ai.azure.com/api/projects/my-project
+# AZURE_AI_PROJECT_NAME=my-project
 # MODEL_DEPLOYMENT=gpt-4o
 
-# ============================================================================
-# SCENARIO 2: BRING YOUR OWN - MCP Server Resources
-# ============================================================================
-# Uncomment and set these ONLY if you already deployed the MCP server
+# ===========================================
+# OPTIONAL: Existing Infrastructure
+# ===========================================
+# Uncomment to use existing resources
 
-# Resource group name (if not set, uses: <PROJECT_NAME>-rg)
-# RESOURCE_GROUP=
+# RESOURCE_GROUP=my-existing-rg
+# CONTAINER_APP_NAME=my-existing-app
+# KEY_VAULT_NAME=my-existing-vault
+# MCP_ENDPOINT=https://my-mcp-server.azurecontainerapps.io/mcp
 
-# Container App name (if not set, uses: <PROJECT_NAME>-<env>-mcp)
-# CONTAINER_APP_NAME=
+# ===========================================
+# OPTIONAL: Deployment Settings
+# ===========================================
 
-# Container App URL (auto-populated after deployment)
-# CONTAINER_APP_URL=
-
-# Azure Key Vault name (auto-populated after deployment)
-# KEY_VAULT_NAME=
-
-# MCP Server endpoint URL (auto-populated after deployment)
-# Example: https://myproject-dev-mcp-xyz.azurecontainerapps.io/mcp
-# MCP_ENDPOINT=
-
-# ============================================================================
-# OPTIONAL: Deployment Configuration
-# ============================================================================
-
-# Environment name (appended to resource names)
-# Options: dev, test, prod (default: dev)
+# Environment (dev, test, prod)
 NODE_ENV=dev
 
-# CORS allowed origins - comma-separated
+# CORS origins
 ALLOWED_ORIGINS=https://ai.azure.com
 
-# Enable rate limiting (default: true)
+# Rate limiting
 ENABLE_RATE_LIMITING=true
 
-# ============================================================================
-# OPTIONAL: Foundry Deployment Parameters (For New Deployments)
-# ============================================================================
-# These control what gets deployed when you deploy a NEW Foundry project
+# ===========================================
+# OPTIONAL: Model Configuration
+# ===========================================
 
-# Model to deploy (default: gpt-4o-mini)
-# Options: gpt-4o, gpt-4o-mini, gpt-4
 # FOUNDRY_MODEL_NAME=gpt-4o-mini
-
-# Model version (default: 2024-07-18)
 # FOUNDRY_MODEL_VERSION=2024-07-18
-
-# Model capacity - tokens per minute in thousands (default: 150)
 # FOUNDRY_MODEL_CAPACITY=150
 
-# ============================================================================
-# OPTIONAL: Agent Configuration
-# ============================================================================
-# Agent names for deployment scripts
+# ===========================================
+# OPTIONAL: Agent Names  
+# ===========================================
 
-# SQL Agent name (default: <PROJECT_NAME>-sql-agent)
-# SQL_AGENT_NAME=
+# SQL_AGENT_NAME=my-sql-agent
+# GITHUB_AGENT_NAME=my-github-agent
 
-# GitHub Agent name (default: <PROJECT_NAME>-github-agent)
-# GITHUB_AGENT_NAME=
+# ===========================================
+# LOCAL DEVELOPMENT
+# ===========================================
 
-# ============================================================================
-# LOCAL DEVELOPMENT ONLY (Not used in Azure deployment)
-# ============================================================================
-
-# Server port (default: 3000)
 # PORT=3000
-
-# SQL connection timeout in seconds (default: 120)
 # CONNECTION_TIMEOUT=120
-
-# SQL authentication mode: auto, managed-identity, or azure-cli (default: auto)
 # SQL_AUTH_MODE=auto
-
-# Read-only mode - prevent write operations (default: false)
 # READONLY=false
-
-# Log level: error, warn, info, debug (default: info)
 # LOG_LEVEL=info
